[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/star_compass.gd" id="1_compass"]

[node name="StarCompass" type="Control"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 50.0
offset_right = -8.0
offset_bottom = 120.0
grow_horizontal = 0
script = ExtResource("1_compass")

[node name="CompassContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StarIcon" type="Label" parent="CompassContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 5.0
offset_right = 20.0
offset_bottom = 35.0
grow_horizontal = 2
text = "★"
horizontal_alignment = 1

[node name="DirectionArrow" type="Label" parent="CompassContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -15.0
offset_top = 30.0
offset_right = 15.0
offset_bottom = 50.0
grow_horizontal = 2
pivot_offset = Vector2(15, 10)
text = "▼"
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="CompassContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -15.0
offset_right = 35.0
grow_horizontal = 2
grow_vertical = 0
text = "Najm Al-Shimali"
horizontal_alignment = 1
